Add Cache ability to FilePersistentMemoryAllocator.

This functionality is used by the FileMetricsProvider, currently based
on a Feature to be enabled.

Bug: 882892
Change-Id: I55262453b58c5ed9473b33e8839bad423ca7ec84
Reviewed-on: https://chromium-review.googlesource.com/1220310
Commit-Queue: Brian White <bcwhite@chromium.org>
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592120}